--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     ],
     "minimum-stability": "dev",
     "require": {
-        "php": "^7.1.3",
+        "php": "^7.1.3"
     },
     "require-dev": {
         "phpunit/phpunit": "^7.0",
