--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,10 @@
         "laravel": {
             "providers": [
                 "Shanmuga\\LaravelEntrust\\LaravelEntrustServiceProvider"
-            ]
+            ],
+            "aliases": {
+                "LaravelEntrust": "Shanmuga\\LaravelEntrust\\Facades\\LaravelEntrustFacade"
+            }
         }
     },
 }
