--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
-    "name": "shanmuga/entrust",
+    "name": "shanmuga/laravel-entrust",
     "description": "This package provides a flexible solution to add ACL to Laravel",
-    "type": "project",
+    "keywords": ["acl", "authorization", "php", "laravel","entrust", "roles", "permissions"],
     "license": "MIT",
     "authors": [
         {
@@ -11,17 +11,19 @@
     ],
     "minimum-stability": "dev",
     "require": {
-        "php": "^7.1.3"
+        "php": "^7.1.3",
+        "laravel/framework": "~5.5.0|~5.6.0|~5.7.0|~5.8.0|~6.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^7.0",
-        "orchestra/testbench": "~3.6.0"
+        "orchestra/testbench": "~3.6.0|~3.7.0|~3.8.0|~3.9.0",
     },
     "autoload": {
         "psr-4": {
             "Shanmuga\\LaravelEntrust\\": "src/"
         }
     },
+    "prefer-stable": true,
     "extra": {
         "laravel": {
             "providers": [
