--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^7.0",
-        "orchestra/testbench": "~3.6.0|~3.7.0|~3.8.0|~3.9.0",
+        "orchestra/testbench": "~3.6.0|~3.7.0|~3.8.0|~3.9.0"
     },
     "autoload": {
         "psr-4": {
