--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     "minimum-stability": "dev",
     "require": {
         "php": "^7.1.3",
-        "laravel/framework": "~5.5.0|~5.6.0|~5.7.0|~5.8.0|~6.0"
+        "laravel/framework": "~5.5.0|~5.6.0|~5.7.0|~5.8.0|~6.0|~7.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^7.0",
