--- a/composer.json
+++ b/composer.json
@@ -15,8 +15,7 @@
         "laravel/framework": "~5.5.0|~5.6.0|~5.7.0|~5.8.0|~6.0|~7"
     },
     "require-dev": {
-        "phpunit/phpunit": "^7.0",
-        "orchestra/testbench": "~3.6.0|~3.7.0|~3.8.0|~3.9.0"
+        "phpunit/phpunit": "^7.0"
     },
     "autoload": {
         "psr-4": {
