--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     "minimum-stability": "dev",
     "require": {
         "php": "^7.2.5",
-        "laravel/framework": "~5.5.0|~5.6.0|~5.7.0|~5.8.0|~6.0|~7"
+        "illuminate/support": "^5.5|^6|^7|^8"
     },
     "require-dev": {
         "phpunit/phpunit": "^7.0"
