--- a/composer.json
+++ b/composer.json
@@ -11,11 +11,11 @@
     ],
     "minimum-stability": "dev",
     "require": {
-        "php": "^7.2.5|^8.0",
-        "illuminate/support": "^5.5|^6|^7|^8"
+        "php": "^8.0",
+        "illuminate/support": "^9.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^7.0|^8.0|^9.0"
+        "phpunit/phpunit": "^9.5.4"
     },
     "autoload": {
         "psr-4": {
