--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,16 @@
 {
     "name": "shanmuga/laravel-entrust",
     "description": "This package provides a flexible solution to add ACL to Laravel",
-    "keywords": ["acl", "authorization", "php", "laravel","entrust", "roles", "permissions", "laravel-entrust"],
+    "keywords": [
+        "acl",
+        "authorization",
+        "php",
+        "laravel",
+        "entrust",
+        "roles",
+        "permissions",
+        "laravel-entrust"
+    ],
     "license": "MIT",
     "authors": [
         {
@@ -11,11 +20,11 @@
     ],
     "minimum-stability": "dev",
     "require": {
-        "php": "^8.0",
-        "illuminate/support": "^9.0"
+        "php": "^8.1",
+        "illuminate/support": "^10.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^9.5.4"
+        "phpunit/phpunit": "^9.5.10"
     },
     "autoload": {
         "psr-4": {
