--- a/composer.json
+++ b/composer.json
@@ -21,10 +21,10 @@
     "minimum-stability": "dev",
     "require": {
         "php": "^8.1",
-        "illuminate/support": "^10.0"
+        "illuminate/support": "^10.0|^11.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^9.5.10"
+        "phpunit/phpunit": "^9.5.10|^10.5"
     },
     "autoload": {
         "psr-4": {
